--- a/index.Rmd
+++ b/index.Rmd
@@ -280,6 +280,7 @@ From: `r Citet(myBib,"sheryltiantongleeJakartaIndonesiaCapital2023")`
 ```{r echo=FALSE, out.width="80%"}
 knitr::include_graphics("SendaiFramrwork.jpeg")
 ```
+
 ]
 .pull-right[
 
@@ -292,10 +293,10 @@ knitr::include_graphics("SendaiFramrwork.jpeg")
 
 * Recognises the state has the primary role for DRR
 
-* Stakeholders should share the responsibility with the state
 
 
 ]
+<small>Source: [Implementing the Sendai Framework](https://www.undrr.org/implementing-sendai-framework/what-sendai-framework)</small>
 ---
 ## Global agendas and goals 2
 ### Sustainable Development Goals (SDGs)
@@ -365,7 +366,7 @@ knitr::include_graphics("E_PRINT_15.jpg")
 ]
 ]
 ]
-
+<small>Source: [The 17 Goals | Sustainable Development](https://sdgs.un.org/goals)</small>
 ---
 ```{r xaringan-all, echo=FALSE, warning=FALSE}
 ```
