--- a/bib_group_pres.bib
+++ b/bib_group_pres.bib
@@ -41,6 +41,22 @@
   file = {C:\Users\mperm\Zotero\storage\T8VBYBPW\Abidin et al. - 2015 - Study on the risk and impacts of land subsidence i.pdf}
 }
 
+@article{abidinStudyRiskImpacts2015a,
+  title = {Study on the Risk and Impacts of Land Subsidence in {{Jakarta}}},
+  author = {Abidin, H. Z. and Andreas, H. and Gumilar, I. and Brinkman, J. J.},
+  year = {2015},
+  month = nov,
+  journal = {Proceedings of the International Association of Hydrological Sciences},
+  volume = {372},
+  pages = {115--120},
+  issn = {2199-899X},
+  doi = {10.5194/piahs-372-115-2015},
+  urldate = {2024-03-18},
+  abstract = {Jakarta is the capital city of Indonesia located in the west-northern coast of Java island, within a deltaic plain and passes by 13 natural and artificial rivers. This megapolitan has a population of about 10.2 million people inhabiting an area of about 660 km2, with relatively rapid urban development. It has been reported for many years that several places in Jakarta are subsiding at different rates. The main causative factors of land subsidence in Jakarta are most probably excessive groundwater extraction, load of constructions (i.e., settlement of high compressibility soil), and natural consolidation of alluvial soil. Land subsidence in Jakarta has been studied using leveling surveys, GPS surveys, InSAR and Geometric-Historic techniques. The results obtained from leveling surveys, GPS surveys and InSAR technique over the period between 1974 and 2010 show that land subsidence in Jakarta has spatial and temporal variations with typical rates of about 3--10 cm year-1. Rapid urban development, relatively young alluvium soil, and relatively weak mitigation and adapatation initiatives, are risk increasing factors of land subsidence in Jakarta. The subsidence impacts can be seen already in the field in forms of cracking and damage of housing, buildings and infrastructure; wider expansion of (riverine and coastal) flooding areas, malfunction of drainage system, changes in river canal and drain flow systems and increased inland sea water intrusion. These impacts can be categorized into infrastructural, environmental, economic and social impacts. The risk and impacts of land subsidence in Jakarta and their related aspects are discussed in this paper.},
+  langid = {english},
+  file = {C:\Users\mperm\Zotero\storage\8SNR3VQI\Abidin et al. - 2015 - Study on the risk and impacts of land subsidence i.pdf}
+}
+
 @article{arieldinarLandSubsidenceForgotten2018,
   title = {Land {{Subsidence}}: {{The Forgotten Enigma}} of {{Groundwater}} ({{Over}}){{Extraction}}},
   author = {{Ariel Dinar} and {Jose Albiac} and {Encarna Esteban} and {Elena Calvo} and {Gerardo Herrera}},
@@ -79,6 +95,19 @@
   abstract = {Sea level rise (SLR) is among the most pressing challenges for urban coastal areas. While geocentric (eustatic) SLR receives widespread attention in politics and media, relative SLR at the coast, mainly caused by land subsidence, is still comparatively under-researched despite much higher rates. This paper introduces a combined natural and social science study to bring subsidence more to the forefront of coastal hazard research. We use data from radar altimetry, GNSS controlled tide gauge stations, and InSAR mapping to characterize regional and relative SLR at Jakarta and Semarang Bay, and focus-group discussions and a standardized household survey to analyze risk perceptions and adaptation. Our analysis of InSAR, radar altimetry, and corrected tide gauges clearly identifies subsidence as the major coastal threat in our study areas. The InSAR analysis for Semarang shows stable trends of subsidence up to {\textasciitilde}100 mm/a. For Jakarta, our analysis reveals more complex spatial and temporal patterns with rates around 60 mm/a; revealing significant changes to previous studies. Our analysis of radar altimetry data since 1993 shows a moderate regional SLR of 2.1 mm/a off Semarang and 3.2 mm/a off Jakarta. The InSAR data are integrated into our statistical analysis of household responses towards subsidence. We found, that in contrast to fast-onset events, constantly proceeding subsidence becomes normalized in peoples' perceptions and responses are integrated into day-to-day habits. Thus, risk perception is a far lesser determinant of responses towards subsidence than it is for fast-onset events. Hence, our results relativize former assumptions that risk perception and not actual exposure lead to action. Moreover, we found that local people are not willing to vacate highly exposed areas. Their views need to be included in municipal disaster risk reduction, the urgency of which clearly lies on mitigating subsidence effects rather than on building protection against regionally rising sea levels.},
   keywords = {Adaptation,Coastal flooding,InSAR mapping,Risk perception,Sea level rise},
   file = {C\:\\Users\\mperm\\Zotero\\storage\\QPM295L5\\Bott et al. - 2021 - Land subsidence in Jakarta and Semarang Bay – The .pdf;C\:\\Users\\mperm\\Zotero\\storage\\4RRLEUMA\\S0964569121002581.html}
+}
+
+@misc{c40citiesC40GoodPractice2016,
+  title = {C40 {{Good Practice Guides}}: {{Jakarta}} - {{Coastal Defence Strategy}} and {{Flood Mapping}}},
+  shorttitle = {C40 {{Good Practice Guides}}},
+  author = {{C40 Cities}},
+  year = {2016},
+  journal = {C40 Cities},
+  urldate = {2024-03-18},
+  abstract = {Summary Jakarta, located in a lowland delta area with close to 50\% below regional water level, is vulnerable to coastal...},
+  howpublished = {https://www.c40.org/case-studies/c40-good-practice-guides-jakarta-coastal-defence-strategy-and-flood-mapping/},
+  langid = {british},
+  file = {C:\Users\mperm\Zotero\storage\KHHZP4WG\c40-good-practice-guides-jakarta-coastal-defence-strategy-and-flood-mapping.html}
 }
 
 @misc{dedenrukmanaFloodGovernanceJakarta2016,
@@ -196,6 +225,16 @@
   urldate = {2024-03-17},
   abstract = {Coastal communities are vulnerable to multihazards, which are exacerbated by land subsidence. On the US east coast, the high density of population and assets amplifies the region's exposure to coastal hazards. We utilized measurements of vertical land motion rates obtained from analysis of radar datasets to evaluate the subsidence-hazard exposure to population, assets, and infrastructure systems/facilities along the US east coast. Here, we show that 2,000 to 74,000\>km2 land area, 1.2 to 14 million people, 476,000 to 6.3 million properties, and \&gt;50\% of infrastructures in major cities such as New York, Baltimore, and Norfolk are exposed to subsidence rates between 1 and 2\>mm per year. Additionally, our analysis indicates a notable trend: as subsidence rates increase, the extent of area exposed to these hazards correspondingly decreases. Our analysis has far-reaching implications for community and infrastructure resilience planning, emphasizing the need for a targeted approach in transitioning from reactive to proactive hazard mitigation strategies in the era of climate change.},
   file = {C:\Users\mperm\Zotero\storage\4GI9TL4F\Ohenhen et al. - 2024 - Slowly but surely Exposure of communities and inf.pdf}
+}
+
+@article{ploutarchostzampoglouWaterFreeFullText2023,
+  title = {Water {\textbar} {{Free Full-Text}} {\textbar} {{Selected Worldwide Cases}} of {{Land Subsidence Due}} to {{Groundwater Withdrawal}}},
+  author = {{Ploutarchos Tzampoglou} and {Loanna Llia} and {Konstantinos Karalis} and {Paraskevas Tsangaratos} and {Xia Zhao} and {Wei Chan}},
+  year = {2023},
+  journal = {Risk Analysis in Landslides and Groundwater-Related Hazards},
+  doi = {10.3390/w15061094},
+  urldate = {2024-03-18},
+  file = {C:\Users\mperm\Zotero\storage\QTBA73LP\1094.html}
 }
 
 @misc{sabinFreeStreetsWorld2023,
